collapse and edit/submit/cancel buttons fix

--- a/source/style/ExerciseCardStyle.css
+++ b/source/style/ExerciseCardStyle.css
@@ -7,10 +7,14 @@
 
 .exerciseHeader {
     width: 100%;
-    position: relative;
-    display: block;
+    position: static;
+    display: flex;
+    justify-content: space-between;
     overflow: hidden;
-    padding: 5px 0 5px 0;
+}
+
+.exerciseHeader > * {
+    margin: 10px;
 }
 
 .exerciseContent {
@@ -20,10 +24,11 @@
     padding: 5px 10px 5px 10px;
 }
 
-.collapseButton {
-   cursor: pointer;
+.expand-arrow {
+    cursor: pointer;
 }
 
 .exerciseContent > * {
+    position: relative;
     flex: 1;
 }
